# Battleship

./: CMakeLists.txt  guidelines.txt  readme.txt
data/input/: input.txt
data/lambda/0/: A.txt  B.txt
data/lambda/1/: A.txt  B.txt
data/lambda/2/: A.txt  B.txt
data/lambda/3/: A.txt  B.txt
data/lambda/4/: A.txt  B.txt
data/lambda/5/: A.txt  B.txt
data/lambda/6/: A.txt  B.txt
data/lambda/7/: A.txt  B.txt
data/lambda/8/: A.txt  B.txt
data/lambda/9/: A.txt  B.txt
data/output/test/: obs_seq_0.txt  obs_seq_1.txt  obs_seq_2.txt  obs_seq_3.txt  obs_seq_4.txt  obs_seq_5.txt  obs_seq_6.txt  obs_seq_7.txt  obs_seq_8.txt  obs_seq_9.txt
data/output/train/: obs_seq_0.txt  obs_seq_1.txt  obs_seq_2.txt  obs_seq_3.txt  obs_seq_4.txt  obs_seq_5.txt  obs_seq_6.txt  obs_seq_7.txt  obs_seq_8.txt  obs_seq_9.txt
data/recordings/0/: obs_1.txt  obs_10.txt  obs_11.txt  obs_12.txt  obs_13.txt  obs_14.txt  obs_15.txt  obs_16.txt  obs_17.txt  obs_18.txt  obs_19.txt  obs_2.txt  obs_20.txt  obs_3.txt  obs_4.txt  obs_5.txt  obs_6.txt  obs_7.txt  obs_8.txt  obs_9.txt
data/recordings/1/: obs_1.txt  obs_10.txt  obs_11.txt  obs_12.txt  obs_13.txt  obs_14.txt  obs_15.txt  obs_16.txt  obs_17.txt  obs_18.txt  obs_19.txt  obs_2.txt  obs_20.txt  obs_3.txt  obs_4.txt  obs_5.txt  obs_6.txt  obs_7.txt  obs_8.txt  obs_9.txt
data/recordings/2/: obs_1.txt  obs_10.txt  obs_11.txt  obs_12.txt  (+16 more)
include/: HMM.h  game.hpp  grid.hpp  player.hpp  ship.hpp  utils.h
run/: CMakeLists.txt  main.cpp  test.cpp
src/: CMakeLists.txt  HMM.cpp  game.cpp  grid.cpp  player.cpp  ship.cpp  utils.cpp
(+241 files in other folders)
